versioned_docs/version-1.15.x/3-WEB服务开发/3-WEB服务开发.md
---
title: 'WEB服务开发'
sidebar_position: 3
hide_title: true
---

- [开始使用](output/goframe-v1.15-md/WEB服务开发/开始使用)
- [路由管理](output/goframe-v1.15-md/WEB服务开发/路由管理)
  - [路由管理-路由规则](output/goframe-v1.15-md/WEB服务开发/路由管理/路由管理-路由规则)
  - [路由管理-路由注册](output/goframe-v1.15-md/WEB服务开发/路由管理/路由管理-路由注册)
    - [路由注册-函数注册](output/goframe-v1.15-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-函数注册)
    - [路由注册-对象注册](output/goframe-v1.15-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-对象注册)
    - [路由注册-分组路由](output/goframe-v1.15-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-分组路由)
  - [路由管理-中间件/拦截器](output/goframe-v1.15-md/WEB服务开发/路由管理/路由管理-中间件拦截器)
- [请求输入](output/goframe-v1.15-md/WEB服务开发/请求输入)
  - [请求输入-复杂参数](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-复杂参数)
  - [请求输入-对象处理](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-对象处理)
  - [请求输入-请求校验](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-请求校验)
  - [请求输入-JSON/XML](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-JSONXML)
  - [请求输入-默认值绑定](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-默认值绑定)
  - [请求输入-自定义变量](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-自定义变量)
  - [请求输入-Context](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-Context)
  - [请求输入-文件上传](output/goframe-v1.15-md/WEB服务开发/请求输入/请求输入-文件上传)
- [数据返回](output/goframe-v1.15-md/WEB服务开发/数据返回)
  - [数据返回-缓冲控制](output/goframe-v1.15-md/WEB服务开发/数据返回/数据返回-缓冲控制)
  - [数据返回-模板解析](output/goframe-v1.15-md/WEB服务开发/数据返回/数据返回-模板解析)
  - [数据返回-JSON/XML](output/goframe-v1.15-md/WEB服务开发/数据返回/数据返回-JSONXML)
  - [数据返回-Exit控制](output/goframe-v1.15-md/WEB服务开发/数据返回/数据返回-Exit控制)
- [Cookie](output/goframe-v1.15-md/WEB服务开发/Cookie)
- [Session](output/goframe-v1.15-md/WEB服务开发/Session)
  - [Session-文件存储](output/goframe-v1.15-md/WEB服务开发/Session/Session-文件存储)
  - [Session-内存存储](output/goframe-v1.15-md/WEB服务开发/Session/Session-内存存储)
  - [Session-Redis存储](output/goframe-v1.15-md/WEB服务开发/Session/Session-Redis存储)
- [服务配置](output/goframe-v1.15-md/WEB服务开发/服务配置)
- [异常处理](output/goframe-v1.15-md/WEB服务开发/异常处理)
- [HTTPClient](output/goframe-v1.15-md/WEB服务开发/HTTPClient)
  - [HTTPClient-链式操作](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-链式操作)
  - [HTTPClient-基本使用](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-基本使用)
  - [HTTPClient-文件上传](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-文件上传)
  - [HTTPClient-自定义Cookie](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-自定义Cookie)
  - [HTTPClient-自定义Header](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-自定义Header)
  - [HTTPClient-请求信息打印](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-请求信息打印)
  - [HTTPClient-代理Proxy设置](output/goframe-v1.15-md/WEB服务开发/HTTPClient/HTTPClient-代理Proxy设置)
- [分页管理](output/goframe-v1.15-md/WEB服务开发/分页管理)
  - [分页管理-动态分页](output/goframe-v1.15-md/WEB服务开发/分页管理/分页管理-动态分页)
  - [分页管理-静态分页](output/goframe-v1.15-md/WEB服务开发/分页管理/分页管理-静态分页)
  - [分页管理-Ajax分页](output/goframe-v1.15-md/WEB服务开发/分页管理/分页管理-Ajax分页)
  - [分页管理-URL模板](output/goframe-v1.15-md/WEB服务开发/分页管理/分页管理-URL模板)
  - [分页管理-自定义分页](output/goframe-v1.15-md/WEB服务开发/分页管理/分页管理-自定义分页)
- [高级特性](output/goframe-v1.15-md/WEB服务开发/高级特性)
  - [静态文件服务](output/goframe-v1.15-md/WEB服务开发/高级特性/静态文件服务)
  - [服务日志管理](output/goframe-v1.15-md/WEB服务开发/高级特性/服务日志管理)
  - [HTTPS & TLS](output/goframe-v1.15-md/WEB服务开发/高级特性/HTTPS%20&%20TLS)
  - [平滑重启特性](output/goframe-v1.15-md/WEB服务开发/高级特性/平滑重启特性)
  - [CORS跨域处理](output/goframe-v1.15-md/WEB服务开发/高级特性/CORS跨域处理)
  - [CSRF防御设置](output/goframe-v1.15-md/WEB服务开发/高级特性/CSRF防御设置)
  - [HOOK事件回调](output/goframe-v1.15-md/WEB服务开发/高级特性/HOOK事件回调)
  - [WebSocket服务](output/goframe-v1.15-md/WEB服务开发/高级特性/WebSocket服务)
  - [自定义状态码处理](output/goframe-v1.15-md/WEB服务开发/高级特性/自定义状态码处理)
  - [PProf服务性能分析](output/goframe-v1.15-md/WEB服务开发/高级特性/PProf服务性能分析)
  - [SameSite 设置](output/goframe-v1.15-md/WEB服务开发/高级特性/SameSite%20设置)