versioned_docs/version-2.2.x/3-WEB服务开发/3-WEB服务开发.md
---
title: 'WEB服务开发'
sidebar_position: 3
hide_title: true
---

- [开始使用](output/goframe-v2.2-md/WEB服务开发/开始使用)
- [路由管理](output/goframe-v2.2-md/WEB服务开发/路由管理)
  - [路由管理-路由规则](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-路由规则)
  - [路由管理-路由注册](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-路由注册)
    - [路由注册-函数注册](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-函数注册)
    - [路由注册-对象注册](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-对象注册)
    - [路由注册-分组路由](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-分组路由)
    - [路由注册-规范路由](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-路由注册/路由注册-规范路由)
  - [路由管理-中间件/拦截器](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-中间件拦截器)
    - [中间件/拦截器-基本介绍](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-中间件拦截器/中间件拦截器-基本介绍)
    - [中间件/拦截器-使用示例](output/goframe-v2.2-md/WEB服务开发/路由管理/路由管理-中间件拦截器/中间件拦截器-使用示例)
- [接口文档](output/goframe-v2.2-md/WEB服务开发/接口文档)
  - [接口文档-OpenAPIv3](output/goframe-v2.2-md/WEB服务开发/接口文档/接口文档-OpenAPIv3)
  - [接口文档-自定义UI](output/goframe-v2.2-md/WEB服务开发/接口文档/接口文档-自定义UI)
- [请求输入](output/goframe-v2.2-md/WEB服务开发/请求输入)
  - [请求输入-复杂参数](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-复杂参数)
  - [请求输入-对象处理](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-对象处理)
  - [请求输入-请求校验](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-请求校验)
  - [请求输入-JSON/XML](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-JSONXML)
  - [请求输入-默认值绑定](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-默认值绑定)
  - [请求输入-自定义变量](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-自定义变量)
  - [请求输入-Context](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-Context)
  - [请求输入-文件上传](output/goframe-v2.2-md/WEB服务开发/请求输入/请求输入-文件上传)
- [数据返回](output/goframe-v2.2-md/WEB服务开发/数据返回)
  - [数据返回-缓冲控制](output/goframe-v2.2-md/WEB服务开发/数据返回/数据返回-缓冲控制)
  - [数据返回-JSON/XML](output/goframe-v2.2-md/WEB服务开发/数据返回/数据返回-JSONXML)
  - [数据返回-Redirect](output/goframe-v2.2-md/WEB服务开发/数据返回/数据返回-Redirect)
  - [数据返回-Exit控制](output/goframe-v2.2-md/WEB服务开发/数据返回/数据返回-Exit控制)
  - [数据返回-文件下载](output/goframe-v2.2-md/WEB服务开发/数据返回/数据返回-文件下载)
  - [数据返回-模板解析](output/goframe-v2.2-md/WEB服务开发/数据返回/数据返回-模板解析)
- [服务配置](output/goframe-v2.2-md/WEB服务开发/服务配置)
  - [服务配置-配置文件](output/goframe-v2.2-md/WEB服务开发/服务配置/服务配置-配置文件)
  - [服务配置-配置文件模板](output/goframe-v2.2-md/WEB服务开发/服务配置/服务配置-配置文件模板)
  - [服务配置-配置方法](output/goframe-v2.2-md/WEB服务开发/服务配置/服务配置-配置方法)
- [Cookie](output/goframe-v2.2-md/WEB服务开发/Cookie)
- [Session](output/goframe-v2.2-md/WEB服务开发/Session)
  - [Session-File](output/goframe-v2.2-md/WEB服务开发/Session/Session-File)
  - [Session-Memory](output/goframe-v2.2-md/WEB服务开发/Session/Session-Memory)
  - [Session-Redis-KeyValue](output/goframe-v2.2-md/WEB服务开发/Session/Session-Redis-KeyValue)
  - [Session-Redis-HashTable](output/goframe-v2.2-md/WEB服务开发/Session/Session-Redis-HashTable)
  - [Session-Storage接口开发](output/goframe-v2.2-md/WEB服务开发/Session/Session-Storage接口开发)
- [异常处理](output/goframe-v2.2-md/WEB服务开发/异常处理)
- [HTTPClient](output/goframe-v2.2-md/WEB服务开发/HTTPClient)
  - [HTTPClient-基本使用](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-基本使用)
  - [HTTPClient-文件上传](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-文件上传)
  - [HTTPClient-自定义Cookie](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-自定义Cookie)
  - [HTTPClient-自定义Header](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-自定义Header)
  - [HTTPClient-自定义ContentType](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-自定义ContentType)
  - [HTTPClient-请求信息打印](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-请求信息打印)
  - [HTTPClient-代理Proxy设置](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-代理Proxy设置)
  - [HTTPClient-拦截器/中间件](output/goframe-v2.2-md/WEB服务开发/HTTPClient/HTTPClient-拦截器中间件)
- [分页管理](output/goframe-v2.2-md/WEB服务开发/分页管理)
  - [分页管理-动态分页](output/goframe-v2.2-md/WEB服务开发/分页管理/分页管理-动态分页)
  - [分页管理-静态分页](output/goframe-v2.2-md/WEB服务开发/分页管理/分页管理-静态分页)
  - [分页管理-Ajax分页](output/goframe-v2.2-md/WEB服务开发/分页管理/分页管理-Ajax分页)
  - [分页管理-URL模板](output/goframe-v2.2-md/WEB服务开发/分页管理/分页管理-URL模板)
  - [分页管理-自定义分页](output/goframe-v2.2-md/WEB服务开发/分页管理/分页管理-自定义分页)
- [高级特性](output/goframe-v2.2-md/WEB服务开发/高级特性)
  - [静态文件服务](output/goframe-v2.2-md/WEB服务开发/高级特性/静态文件服务)
  - [服务日志管理](output/goframe-v2.2-md/WEB服务开发/高级特性/服务日志管理)
  - [HTTPS & TLS](output/goframe-v2.2-md/WEB服务开发/高级特性/HTTPS%20&%20TLS)
  - [平滑重启特性](output/goframe-v2.2-md/WEB服务开发/高级特性/平滑重启特性)
  - [CORS跨域处理](output/goframe-v2.2-md/WEB服务开发/高级特性/CORS跨域处理)
  - [CSRF防御设置](output/goframe-v2.2-md/WEB服务开发/高级特性/CSRF防御设置)
  - [HOOK事件回调](output/goframe-v2.2-md/WEB服务开发/高级特性/HOOK事件回调)
  - [WebSocket服务](output/goframe-v2.2-md/WEB服务开发/高级特性/WebSocket服务)
  - [自定义状态码处理](output/goframe-v2.2-md/WEB服务开发/高级特性/自定义状态码处理)
  - [PProf服务性能分析](output/goframe-v2.2-md/WEB服务开发/高级特性/PProf服务性能分析)
  - [SameSite 设置](output/goframe-v2.2-md/WEB服务开发/高级特性/SameSite%20设置)
- [性能测试](output/goframe-v2.2-md/WEB服务开发/性能测试)